Summary of important user-visible changes for string 1.1.0:
-------------------------------------------------------------------

 ** The following functions have been removed since they are part
    of Octave core since 3.6.0:

      strtrim

 ** Package is no longer automatically loaded.

 ** The function `cstrcmp' has been completely rewritten. It should
     perform faster and will accept arguments exactly the same way as
     Octave's core `strcmp'.