@@ -2,6 +2,15 @@ Summary of important user-visible changes for string 1.1.0:
 -------------------------------------------------------------------
 
  ** The following functions have been removed since they are part
+    of Octave core since 3.8.0:
+
+      strjoin
+
+
+Summary of important user-visible changes for string 1.1.0:
+-------------------------------------------------------------------
+
+ ** The following functions have been removed since they are part
     of Octave core since 3.6.0:
 
       strtrim
